# open_vins

./: CMakeLists.txt  TODO  convert.sh  lookup_table.py
floatx/: CMakeLists.txt  package.xml
floatx/src/: costable_0_0001.h  costable_0_001.h  costable_0_01.h  costable_0_1.h  costable_1.h  floatx.h  sintable_0_0001.h  sintable_0_001.h  sintable_0_01.h  sintable_0_1.h  sintable_1.h  types.h
floatx/test/: Makefile  floatx.hpp  test.cpp  types.h
ov_core/: CMakeLists.txt  package.xml
ov_core/src/: dummy.cpp  test_tracking.cpp  test_webcam.cpp
ov_core/src/cpi/: CpiBase.h  CpiV1.h  CpiV2.h
ov_core/src/feat/: Feature.cpp  Feature.h  FeatureDatabase.h  FeatureInitializer.cpp  FeatureInitializer.h  FeatureInitializerOptions.h
ov_core/src/init/: InertialInitializer.cpp  InertialInitializer.h
ov_core/src/sim/: BsplineSE3.cpp  BsplineSE3.h
ov_core/src/track/: Grider_DOG.h  Grider_FAST.h  TrackAruco.cpp  TrackAruco.h  TrackBase.h  TrackDescriptor.cpp  TrackDescriptor.h  TrackKLT.cpp  TrackKLT.h  TrackSIM.cpp  TrackSIM.h
ov_core/src/types/: IMU.h  JPLQuat.h  Landmark.cpp  Landmark.h  LandmarkRepresentation.h  PoseJPL.h  Type.h  Vec.h
ov_core/src/utils/: CLI11.hpp  dataset_reader.h  quat_ops.h  sensor_data.h
ov_eval/: CMakeLists.txt  package.xml
ov_eval/src/: error_comparison.cpp  error_dataset.cpp  error_singlerun.cpp  format_converter.cpp  plot_trajectories.cpp  timing_comparison.cpp  timing_flamegraph.cpp  timing_percentages.cpp
ov_eval/src/alignment/: AlignTrajectory.cpp  AlignTrajectory.h  AlignUtils.cpp  AlignUtils.h
ov_eval/src/calc/: ResultSimulation.cpp  ResultSimulation.h  ResultTrajectory.cpp  ResultTrajectory.h
ov_eval/src/plot/: matplotlibcpp.h
ov_eval/src/utils/: Loader.cpp  Loader.h  Math.h  Recorder.h  Statistics.h
ov_msckf/: CMakeLists.txt  package.xml
ov_msckf/launch/: display.rviz  display_driving.rviz  pgeneva_ros_eth.launch  pgeneva_ros_kaist.launch  pgeneva_ros_tum_1024.launch  pgeneva_ros_tum_512.launch  pgeneva_ros_uzhfpv.launch  pgeneva_serial_aruco.launch  pgeneva_serial_eth.launch  pgeneva_serial_ironsides.launch  pgeneva_serial_tum.launch
ov_msckf/src/: dummy.cpp  ros_serial_msckf.cpp  ros_subscribe_msckf.cpp  run_simulation.cpp  test_sim_meas.cpp  test_sim_repeat.cpp
ov_msckf/src/core/: RosVisualizer.cpp  RosVisualizer.h  VioManager.cpp  VioManager.h  VioManagerOptions.h
ov_msckf/src/sim/: Simulator.cpp  Simulator.h
ov_msckf/src/state/: Propagator.cpp  Propagator.h  State.cpp  State.h  StateHelper.cpp  StateHelper.h  StateOptions.h
ov_msckf/src/update/: UpdaterHelper.cpp  UpdaterHelper.h  UpdaterMSCKF.cpp  UpdaterMSCKF.h  UpdaterOptions.h  (+4 more)
scripts/: display.sh  run.sh  run_all.sh
(+2 files in other folders)
